# jsonify-optuna

./: .gitignore  README.md  pip-publish.sh  pyproject.toml
examples/: basic_jsonify.py  filter_and_attrs.py  load_study_example.py  multi_objective.py
jsonify_optuna/: __init__.py  jsonify_optuna.py
tests/: conftest.py  test_json_to_optuna_study.py  test_jsonify.py  test_load_study.py
