[project]
name = "jsonify-optuna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "optuna>=4.9.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 99
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "TCH",    # flake8 type checking
]

[tool.ruff.lint.isort]
known-first-party = ["jsonify_optuna", "tests"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false
